--- a/kubernetes-lb-example/kubernetes/k8s-headless-service-lb/echo-server.yaml
+++ b/kubernetes-lb-example/kubernetes/k8s-headless-service-lb/echo-server.yaml
@@ -30,8 +30,7 @@ spec:
   ports:
   - name: grpc
     port: 8080
-    protocol: TCP
     targetPort: 8080
   selector:
     run: echo-server
-  type: ClusterIP
+  sessionAffinity: None
