--- a/kubernetes-lb-example/echo-server/pom.xml
+++ b/kubernetes-lb-example/echo-server/pom.xml
@@ -31,6 +31,21 @@
         <main.class>com.example.grpc.server.EchoServer</main.class>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-testing</artifactId>
+            <version>1.51.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <extensions>
             <extension>
